--- a/languages/lazaruside.po
+++ b/languages/lazaruside.po
@@ -23,7 +23,7 @@ msgid "this help message"
 msgstr ""
 
 #: lazarusidestrconsts:lisprimaryconfigdirectorywherelazarusstoresitsconfig
-msgid "                      primary config directory, where Lazarus stores its config files. Default is "
+msgid "primary config directory, where Lazarus stores its config files. Default is "
 msgstr ""
 
 #: lazarusidestrconsts:lislazarusoptionsprojectfilename
@@ -39,19 +39,23 @@ msgid "LCL Interface specific options:"
 msgstr ""
 
 #: lazarusidestrconsts:lisdonotshowsplashscreen
-msgid "                      Do not show splash screen"
+msgid "Do not show splash screen"
 msgstr ""
 
 #: lazarusidestrconsts:lisskiploadinglastproject
-msgid "                      Skip loading last project"
+msgid "Skip loading last project"
+msgstr ""
+
+#: lazarusidestrconsts:lisoverridelanguage
+msgid "Override language. For example --language=de. For possible values see files in the languages directory."
 msgstr ""
 
 #: lazarusidestrconsts:lissecondaryconfigdirectorywherelazarussearchesfor
-msgid "                      secondary config directory, where Lazarus searches for config template files. Default is "
+msgid "secondary config directory, where Lazarus searches for config template files. Default is "
 msgstr ""
 
 #: lazarusidestrconsts:lisfilewheredebugoutputiswritten
-msgid "                      file, where debug output is written to. If it is not specified, debug output is written to the console."
+msgid "file, where debug output is written to. If it is not specified, debug output is written to the console."
 msgstr ""
 
 #: lazarusidestrconsts:lisselectiontool
