--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -12,6 +12,26 @@ msgstr ""
 "X-Poedit-Country: GERMANY\n"
 "X-Poedit-SourceCharset: iso-8859-1\n"
 
+#: lazarusidestrconsts:lisdonotshowsplashscreen
+msgid "                      Do not show splash screen"
+msgstr "                      Eröffnungslogo nicht anzeigen"
+
+#: lazarusidestrconsts:lisskiploadinglastproject
+msgid "                      Skip loading last project"
+msgstr "                      Altes Projekt nicht laden"
+
+#: lazarusidestrconsts:lisfilewheredebugoutputiswritten
+msgid "                      file, where debug output is written to. If it is not specified, debug output is written to the console."
+msgstr "                        Datei, in die die Debugger-Ausgabe geschrieben wird. Ist sie nicht angegeben, erschein die Debug-Ausgabe auf der Konsole."
+
+#: lazarusidestrconsts:lisprimaryconfigdirectorywherelazarusstoresitsconfig
+msgid "                      primary config directory, where Lazarus stores its config files. Default is "
+msgstr "                      Haupteinstellungsverzeichnis, dort speichert Lazarus seine Konfigurationsdateien. Standard ist"
+
+#: lazarusidestrconsts:lissecondaryconfigdirectorywherelazarussearchesfor
+msgid "                      secondary config directory, where Lazarus searches for config template files. Default is "
+msgstr "                      sekundäres Konfigurationsverzeichnis, dort sucht Lazarus nach Konfigurationsschablonen. Standard ist"
+
 #: lazarusidestrconsts:srkmcommand1
 msgid "    command1 \""
 msgstr "   Anweisung1 \""
@@ -1891,10 +1911,6 @@ msgstr "Zeilennummern in Laufzeitfehler-Backtraces anzeigen"
 #: lazarusidestrconsts:lisdistinguishbigandsmalllettersegaanda
 msgid "Distinguish big and small letters e.g. A and a"
 msgstr "Groß- und Kleinschreibung unterscheiden"
-
-#: lazarusidestrconsts:lisdonotshowsplashscreen
-msgid "Do not show splash screen"
-msgstr ""
 
 #: lazarusidestrconsts:dlgnotsplitlinefront
 msgid "Do not split line In front of:"
@@ -4484,10 +4500,6 @@ msgstr "Ausgabeverzeichnis"
 msgid "Overflow"
 msgstr "Überlauf"
 
-#: lazarusidestrconsts:lisoverridelanguage
-msgid "Override language. For example --language=de. For possible values see files in the languages directory."
-msgstr ""
-
 #: lazarusidestrconsts:lissvuooverridesystemvariable
 msgid "Override system variable"
 msgstr "Systemvariablen überschreiben"
@@ -5883,10 +5895,6 @@ msgstr "Größe"
 #: lazarusidestrconsts:liscoskipcallingcompiler
 msgid "Skip calling Compiler"
 msgstr "Aufruf des Compilers übergehen"
-
-#: lazarusidestrconsts:lisskiploadinglastproject
-msgid "Skip loading last project"
-msgstr ""
 
 #: lazarusidestrconsts:dlgcosmaller
 msgid "Smaller Code"
@@ -7772,10 +7780,6 @@ msgstr "Standard (%s)"
 msgid "evaluate/modify"
 msgstr "auswerten/ändern"
 
-#: lazarusidestrconsts:lisfilewheredebugoutputiswritten
-msgid "file, where debug output is written to. If it is not specified, debug output is written to the console."
-msgstr ""
-
 #: lazarusidestrconsts:lisuidinproject
 msgid "in Project:"
 msgstr "im Projekt:"
@@ -7876,10 +7880,6 @@ msgstr "Pakethauptquelldatei"
 msgid "pause program"
 msgstr "Programm pausieren"
 
-#: lazarusidestrconsts:lisprimaryconfigdirectorywherelazarusstoresitsconfig
-msgid "primary config directory, where Lazarus stores its config files. Default is "
-msgstr ""
-
 #: lazarusidestrconsts:lisoipreadonly
 msgid "readonly"
 msgstr "schreibgeschützt"
@@ -7931,10 +7931,6 @@ msgstr "Suche in Verzeichnissen"
 #: lazarusidestrconsts:dlgtimesecondunit
 msgid "sec"
 msgstr "s"
-
-#: lazarusidestrconsts:lissecondaryconfigdirectorywherelazarussearchesfor
-msgid "secondary config directory, where Lazarus searches for config template files. Default is "
-msgstr ""
 
 #: lazarusidestrconsts:lisedtdefsetfpcmodetodelphi
 msgid "set FPC mode to DELPHI"
